# zxing

./: .classpath  .gitattributes  .gitignore  .project  .travis.yaml  .travis.yml  AUTHORS  CHANGES  CONTRIBUTING.md  COPYING  JAVA  LICENSE  NOTICE  README  README.md  Readme.md  Syce  UPCEWriter.java  Wifi  build.properties  build.xml  dependency-convergence.html  dependency-info.html  dependency-management.html  distribution-management.html  index.html  issue-tracking.html  license.html  mail-lists.html  package.json  pom.xml  project-info.html  project-reports.html  project-summary.html  source-repository.html  zszZxing
cpp/: .gdbinit  .gitignore  .svnignore  .valgrind.supp  .valgrindrc  0001-Merge-schulzch-VS-support-and-other-cleanup.patch  CMakeLists.txt  README  README.md  SConscript  SConstruct  astyle-options  blackboxtest.results  blackboxtest.sh  format  ios_Prefix.pch
cpp/cli/src/: ImageReaderSource.cpp  ImageReaderSource.h  jpgd.cpp  lodepng.cpp  lodepng.h  main.cpp
cpp/cmake/: FindCPPUNIT.cmake  FindIconv.cmake
cpp/core/src/: BarcodeFormat.cpp  BarcodeFormat.h  BlackPointEstimationMethod.cpp  BlackPointEstimationMethod.h  Exception.cpp  Exception.h  GrayBytesMonochromeBitmapSource.cpp  GrayBytesMonochromeBitmapSource.h  MonochromeBitmapSource.cpp  MonochromeBitmapSource.h  Reader.cpp  Reader.h  ReaderException.cpp  ReaderException.h  Result.cpp  Result.h  ResultPoint.cpp  ResultPoint.h  TransformingMonochromeBitmapSource.cpp  TransformingMonochromeBitmapSource.h  winCompat.h
cpp/core/src/bigint/: .gitignore  BigInteger.cc  BigInteger.hh  BigIntegerAlgorithms.cc  BigIntegerAlgorithms.hh  BigIntegerLibrary.hh  BigIntegerUtils.cc  BigIntegerUtils.hh  BigUnsigned.cc  BigUnsigned.hh  BigUnsignedInABase.cc  BigUnsignedInABase.hh  ChangeLog  Makefile  README  run-testsuite  sample.cc  testsuite.cc
cpp/core/src/common/: Array.cpp  Array.h  BitArray.cpp  BitArray.h  BitMatrix.cpp  BitMatrix.h  BitSource.cpp  BitSource.h  BlackPointEstimator.cpp  BlackPointEstimator.h  Counted.cpp  Counted.h  DecoderResult.cpp  DecoderResult.h  DetectorResult.cpp  DetectorResult.h  GridSampler.cpp  GridSampler.h  IllegalArgumentException.cpp  Str.h  (+4 more)
cpp/ios.xcodeproj/: project.pbxproj
cpp/magick/src/: MagickBitmapSource.cpp  MagickBitmapSource.h  example.cpp  main.cpp
cpp/osx.xcodeproj/: .gitignore  project.pbxproj
cpp/scons/: scons-LICENSE  scons-README  scons-time.py  scons.py  sconsign.py
cpp/win32/: iconv.h
cpp/zxing-cpp.xcodeproj/: project.pbxproj
(+6783 files in other folders)
